# skcausal

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml
.github/workflows/: ci.yaml  docs.yml  release.yml
design/: density-architecture-design-brief.md
dev/: DOC_PLAN.html  about.html  index.html  search.json
dev/book/: estimator-contract.html  getting-started.html  index.html
dev/density/: continuous.html  index.html
dev/examples/: binary_treatments.html  categorical_treatments.html  continuous_treatments.html  dose_response_curve.html  index.html  multidimensional_treatments.html
dev/learn/: learn.html
dev/research/: benchmarking.html  dataset_catalog.html  extending.html
docs/: DOC_PLAN.md  _quarto.yml  about.qmd  index.qmd  references.bib  render-book.sh  styles.css
docs/_site/: about.html  index.html  search.json
docs/book/: _quarto.yml  continuous-workflows.qmd  estimator-contract.qmd  getting-started.qmd  index.qmd
docs/datasets/: loading.qmd
docs/density/: continuous.qmd  index.qmd
docs/examples/: binary_treatments.qmd  categorical_treatments.qmd  continuous_treatments.qmd  dose_response_curve.qmd  index.qmd  multidimensional_treatments.qmd
docs/learn/: learn.qmd
docs/research/: benchmarking.qmd  dataset_catalog.qmd  datasets.py  extending.qmd
extension_templates/: average_causal_response_estimator.py  density_estimator.py  synthetic_dataset.py
latest/: search.json
latest/density/: continuous.html
latest/examples/: categorical_treatments.html  continuous_treatments.html  multidimensional_treatments.html
latest/learn/: learn.html
latest/research/: extending.html
lightning_logs/version_0/: metrics.csv
lightning_logs/version_1/: metrics.csv
lightning_logs/version_2/: metrics.csv
lightning_logs/version_3/: metrics.csv
lightning_logs/version_5/: metrics.csv
lightning_logs/version_6/: metrics.csv
lightning_logs/version_7/: metrics.csv
previews/PR10/: DOC_PLAN.html  about.html  index.html  search.json  styles.css
previews/PR11/: search.json
previews/PR12/: search.json
previews/PR13/: search.json  styles.css
previews/PR3/: search.json
previews/PR4/: index.html  search.json
previews/PR5/: about.html
previews/PR6/: index.html
previews/PR7/: CNAME  search.json
previews/PR8/: about.html  search.json
src/skcausal/: config.py
test/: test_local_linear_regression.py
test/causal_estimators/: test_all_average_causal_response_estimators.py  test_all_causal_estimators.py  test_gps.py
test/datasets/: test_all_datasets.py  test_simple_linear.py  test_synthetic.py
test/density/: test_all_density_estimators.py  test_base_density_estimator.py  test_optuna_density_estimator.py  test_performance_evaluation.py  test_stabilized_from_conditional.py
test/weight_estimators/: test_all_weight_estimators.py
tests/: test_lookup.py  test_treatment_grid.py
tests/causal_estimators/: test_all_average_causal_response_estimators.py  test_average_response_pipeline.py  test_categorical_doubly_robust.py  test_gps.py  test_pipeline_combinations.py  test_pseudo_outcome.py
tests/datasets/: test_all_datasets.py  test_categorical.py  test_ihdp.py  test_kang_schafer.py  test_meta_multidim.py  test_nurse_staffing.py  (+6 more)
v0.1.0/: about.html  search.json
v0.1.1/: index.html
(+187 files in other folders)
