[tool.poetry]
name = "skcausal"
version = "0.1.0"
description = ""
authors = ["Felipe Angelim <felipeangelim@gmail.com>"]
license = "MIT"
readme = "README.md"
# Include cte directory inside src
packages = [{ from="src", include = "skcausal" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = "^2.0.3"
scikit-learn = "^1.3.0"
torch = { version = "^2.4.1", optional = true }
tqdm = "^4.66.2"
numpy = "<2.0"
skbase = "^0.4.6"
optuna = {version = "^4.0.0", optional = true}
lightning = { version = "^2.5.0.post0", optional = true }
polars = "^1.35.2"
# Dev
pre-commit = {version = "^4.4.0", optional = true}
ipykernel = {version = "^6.29.5", optional = true}
jupyterlab = {version = "^4.1.1", optional = true}
pytest = {version = "^9.0.1", optional = true}
seaborn = {version = "^0.13.2", optional = true}
matplotlib = {version = "^3.7.2", optional = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
# Optional extras that users can install with: pip install skcausal[torch]
torch = ["torch", "lightning"]
optuna = ["optuna"]
dev = ["pre-commit", "jupyterlab", "pytest", "seaborn", "matplotlib"]
[tool.poetry.scripts]
skcausal = "skcausal.cli.main:cli"