[project]
name = "skcausal"
version = "0.0.1"
description = ""
authors = [{ name = "Felipe Angelim", email = "felipeangelim@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "pandas>=2.0.3",
    "scikit-learn>=1.3.0",
    "tqdm>=4.66.2",
    "numpy>=2.0.0,<3.0.0",
    "skbase>=0.4.6",
    "polars>=1.35.2",
]

[project.optional-dependencies]
torch = ["torch>=2.4.1", "lightning>=2.5.0.post0"]
optuna = ["optuna>=4.0.0"]
dev = [
    "pre-commit>=3.3.3",
    "ipykernel>=6.29.5",
    "jupyterlab>=4.1.1",
    "pytest>=9.0.1",
    "seaborn>=0.13.2",
    "matplotlib>=3.7.2",
]

[project.scripts]
skcausal = "skcausal.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skcausal"]

[dependency-groups]
dev = [
    "ruff>=0.15.10",
]
